--- a/concepts/testing-architecture/xunit-model.mdx
+++ b/concepts/testing-architecture/xunit-model.mdx
@@ -1,264 +1,175 @@
 ---
-title: "xUnit Model and Test Discovery"
-description: "Explore GoogleTest’s implementation of the xUnit architecture: how test cases and fixtures are defined, discovered, and automatically executed. Learn how test registration works behind the scenes and what this means for designing scalable test suites."
+title: "The xUnit Model in GoogleTest"
+description: "Understand the xUnit architecture as implemented by GoogleTest: fixture-based test cases, test suites, and test runners. Learn how this model informs every test’s structure and influences test isolation, repeatability, and maintainability."
 ---
 
-# xUnit Model and Test Discovery
+# The xUnit Model in GoogleTest
 
-GoogleTest implements a robust and scalable xUnit architecture that facilitates writing, organizing, discovering, and running test cases automatically. This page demystifies how GoogleTest represents test cases, fixtures, and parameterized tests internally and how the framework discovers and executes them seamlessly. Understanding these concepts empowers users to design maintainable and scalable test suites.
-
----
-
-## 1. The xUnit Architecture in GoogleTest
-
-At its core, GoogleTest is built upon the xUnit testing architecture, a pattern widely adopted for unit testing. This architecture structures tests into:
-
-- **Test Fixtures** (test classes) that define the shared environment and setup for tests.
-- **Test Cases** or **Test Suites**—groups of related tests using common fixtures.
-- **Individual Tests**, defined as separate functions within these test suites.
-
-GoogleTest manages these elements dynamically, enabling:
-
-- Independent and repeatable execution of tests.
-- Automatic discovery and registration of tests without manual enumeration.
-- Parameterized and type-parameterized tests for broad and flexible coverage.
-
-### Why the xUnit Model Matters to Users
-
-The xUnit model in GoogleTest ensures predictable, isolated test execution, which improves both reliability and debuggability. When tests fail, you can pinpoint the source quickly due to isolated fixtures and detailed reporting.
+GoogleTest implements the widely adopted xUnit testing architecture, which structures tests into fixtures, test cases, and test suites, orchestrated by test runners. This model is fundamental to achieving test isolation, repeatability, and maintainability. Understanding its architecture helps users design robust, well-scoped tests that can be executed consistently across environments.
 
 ---
 
-## 2. Defining Test Fixtures and Test Cases
+## Overview of the xUnit Architecture
 
-GoogleTest expects tests to be organized into test fixtures—C++ classes deriving from `::testing::Test` or specialized variants like `TestWithParam<T>` for parameterized tests. You define fixtures with member variables and setup/teardown routines.
+The xUnit framework models testing around the concept of fixtures, test cases, and test runners. GoogleTest's implementation aligns closely with these concepts, providing a simple and effective way to write, group, and run tests.
 
-Tests use fixtures to share this setup and are defined using macros such as `TEST_F` for fixture-based tests or `TEST_P` for parameterized variants.
+### Test Fixtures
 
-### Example: Simple Fixture With Tests
+Test fixtures define the environment in which tests run. They:
+
+- Set up common resources needed by multiple tests (e.g., opening files, allocating memory).
+- Tear down those resources to avoid side-effects between tests, ensuring isolation.
+- Allow users to encapsulate the state and functionality needed for a group of related tests.
+
+In GoogleTest, fixtures are commonly implemented through the `TEST_F` macro using classes derived from `::testing::Test`.
+
+
+### Test Cases and Test Suites
+
+- A **Test Case** groups together related tests that share the same fixture.
+- Multiple test cases form a **Test Suite**, which can be used to organize them logically.
+
+Each test case contains individual tests, implemented as functions, that exercise specific behaviors or scenarios.
+
+### Test Runner
+
+The test runner is responsible for:
+
+- Discovering all tests in the executable automatically.
+- Executing each test in isolation.
+- Collecting results and reporting failures or successes.
+
+GoogleTest provides a built-in test runner that runs all tests registered during program initialization.
+
+
+## How GoogleTest Structures Each Test
+
+Each test follows this flow:
+
+1. **Fixture Construction & SetUp**: Before a test runs, its fixture is constructed, and setup code (`SetUp()` method) is executed.
+2. **Test Execution**: The individual test method runs, exercising the code under test.
+3. **TearDown & Fixture Destruction**: Cleanup code (`TearDown()`) runs, followed by destruction of the fixture instance.
+
+This sequence is strictly enforced to guarantee:
+
+- Tests are isolated: no shared persistent state unless explicitly designed.
+- Tests are repeatable: results are consistent across runs.
+
+
+## Balancing Test Isolation and Shared Setup
+
+While each test runs with a fresh fixture instance, GoogleTest supports shared resources through static members or global resources if absolutely necessary. However, overusing shared state can degrade test isolation and cause flaky tests.
+
+Best practice is to prefer instance-level setup and teardown within fixtures.
+
+
+## Test Repetition and Parameterization
+
+GoogleTest’s xUnit implementation enables parameterized tests, allowing users to run the same test logic over a variety of inputs while maintaining the fixture-based structure.
+
+This approach enhances coverage and reduces test duplication.
+
+
+## Influence of xUnit Model on Test Quality
+
+- **Test Isolation**: Each test operates independently with its own fixture, eliminating unintended inter-test dependencies.
+- **Repeatability**: Tests can be run repeatedly with predictable outcomes due to consistent fixture lifecycle management.
+- **Maintainability**: Logical grouping of tests in suites and cases enhances clarity and helps developers understand and navigate tests.
+
+
+## Practical User Workflow Example
+
 ```cpp
-class MyTestFixture : public ::testing::Test {
+#include <gtest/gtest.h>
+
+// Define a fixture.
+class DatabaseTest : public ::testing::Test {
  protected:
   void SetUp() override {
-    // initialization
+    // Connect to a test database
   }
 
   void TearDown() override {
-    // cleanup
+    // Disconnect and clean up
   }
 
-  int shared_resource_;
+  // Resource handles...
 };
 
-TEST_F(MyTestFixture, TestOne) {
-  EXPECT_EQ(shared_resource_, 42);
+// Test that requires the fixture.
+TEST_F(DatabaseTest, CanInsertRecord) {
+  // Your test logic here
+  ASSERT_TRUE(InsertRecord(...));
 }
 
-TEST_F(MyTestFixture, TestTwo) {
-  EXPECT_TRUE(SomeCheck());
+// Another test using the same fixture.
+TEST_F(DatabaseTest, CanDeleteRecord) {
+  // Test for deleting records
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-Each `TEST_F` will run independently with a new instance of `MyTestFixture`.
 
-### Test Suite and Fixture Identity
+## Tips for Success
 
-In GoogleTest, a test fixture name and test suite name are synonymous. The fixture name defines the suite under which test functions belong. GoogleTest requires all tests in a suite to share the same fixture class.
+- **Always use fixtures** to encapsulate common setup/teardown logic for related tests.
+- **Keep fixtures lightweight and focused** to avoid slow test runs or complexity.
+- **Use sequences or ordering only when necessary** to avoid brittle tests.
+- **Leverage parameterized tests** to generalize test logic and improve coverage.
+- **Run tests in isolation** and avoid static mutable state to maintain independence.
 
----
 
-## 3. Parameterized Tests and Test Generation
+## Troubleshooting Common Pitfalls
 
-GoogleTest extends the xUnit model by supporting *value-parameterized tests* (`TEST_P`) and associated `INSTANTIATE_TEST_SUITE_P`, allowing a single test logic to run across multiple parameters transparently.
+- **Resource leaks between tests**: If you observe resource exhaustion or unexpected behavior, ensure that the `TearDown()` method properly cleans resources.
+- **Tests interfering with each other**: Avoid static or global mutable variables unless carefully managed.
+- **Non-virtual destructors in fixtures**: Always declare destructors as virtual to ensure proper cleanup.
 
-### Defining a Value-Parameterized Test:
 
-```cpp
-class FooTest : public ::testing::TestWithParam<int> {
-  // Setup and members
-};
+## Further Exploration
 
-TEST_P(FooTest, WorksWithParam) {
-  int param = GetParam();
-  EXPECT_TRUE(DoSomething(param));
-}
+To deepen your understanding and advance your mastery, explore related concepts:
 
-INSTANTIATE_TEST_SUITE_P(
-    RangeTests, FooTest,
-    ::testing::Range(1, 4)  // Will run tests with param 1, 2, 3
-);
-```
-
-### Behind the Scenes: Test Expansion and Registration
-
-- Upon GoogleTest initialization (`InitGoogleTest()`), all parameterized tests declared by `TEST_P` macros are registered but not yet instantiated.
-- When `INSTANTIATE_TEST_SUITE_P` is called, GoogleTest:
-  - Invokes the parameter generator (e.g., `Range()`, `Values()`, `Combine()`) to produce parameter sequences.
-  - Creates and registers concrete test instances for each parameter value (each acting like a separate test).
-- This deferred evaluation means test parameters are only generated once during initialization, ensuring reproducibility and isolation.
-
-### Parameter Generators
-
-GoogleTest provides several built-in parameter generators that create value sequences for parameterized tests:
-
-| Generator      | Behavior                                                 | Example                          |
-|----------------|----------------------------------------------------------|---------------------------------|
-| `Range`        | Sequential range of values `[start, end)` with optional step | `Range(0, 5, 2)` yields 0, 2, 4 |
-| `Values`       | List of enumerated values                                 | `Values(3, 5, 8)`                |
-| `ValuesIn`     | Values from containers or arrays                          | `ValuesIn(std::vector<int>{1,2,3})` |
-| `Bool`         | Produces false and true                                   | `Bool()`                        |
-| `Combine`      | Cartesian product of multiple generators producing tuples | `Combine(Values(1,2), Values('a','b'))` |
-| `ConvertGenerator` | Converts generated types via casting or a custom callable | Often used for custom parameter adaptions |
-
-### Example: Combine Generator
-
-```cpp
-INSTANTIATE_TEST_SUITE_P(
-    MyComboTests, MyTestSuite,
-    ::testing::Combine(::testing::Values(1, 2), ::testing::Values('a', 'b')));
-```
-
-This expands to four tests with parameters `(1, 'a')`, `(1, 'b')`, `(2, 'a')`, and `(2, 'b')`.
+- [Test Discovery and Execution Lifecycle](/concepts/testing-architecture/test-discovery-lifecycle)
+- [Mocking: Philosophy and Core Techniques](/concepts/testing-architecture/mocking-principles)
+- [How to Write Parameterized and Typed Tests](/guides/writing-and-structuring-tests/parameterized-tests)
 
 ---
 
-## 4. Test Registration and Execution Flow
-
-### Test Registration
-
-- Test registration occurs at static initialization time when macros like `TEST`, `TEST_F`, or `TEST_P` are used.
-- Each test is represented by a `TestInfo` object containing metadata such as test suite name, test name, type and value parameters, source file, and line number.
-- All registered tests are collected within `TestSuite` objects that group tests by fixture.
-
-### Test Execution Process
-
-1. When `RUN_ALL_TESTS()` is invoked, GoogleTest prepares the environment and filters tests based on user-specified filters and sharding.
-2. The framework iterates over all applicable `TestSuite` instances.
-3. For each `TestSuite`, GoogleTest will:
-   - Call `SetUpTestSuite()` (optional user-defined; runs once before all tests in suite).
-   - Execute each registered `TestInfo` test:
-     - Create a new test fixture instance using the factory stored in `TestInfo`.
-     - Call `SetUp()` of the fixture.
-     - Run the test body.
-     - Call `TearDown()` of the fixture.
-     - Delete the fixture instance.
-   - Call `TearDownTestSuite()` (optional user-defined; runs once after all tests in suite).
-
-### Outcome Reporting
-
-- Results of each test (pass, fail, skip) are recorded in `TestResult` objects attached to `TestInfo`.
-- Listeners subscribed to GoogleTest events receive notifications on test start, failures, and completion.
-- Support for detailed reporting includes XML/JSON output generation, console printing, and customizable event listeners.
-
----
-
-## 5. Scalability and Extensibility in GoogleTest's xUnit Model
-
-### Scalable Test Definitions
-
-- The use of parameterized tests avoids test duplication.
-- Abstract test suites (with deferred instantiation) enable library-style reusable test logic.
-- Type-parameterized tests (`TYPED_TEST`, `TYPED_TEST_SUITE`) support running the same suite over multiple types, useful for templates and generic programming.
-
-### Test Discovery
-
-- Tests are discovered automatically via static registration—no manual registration needed.
-- Filtering on test names, types, and parameters is natively supported.
-- Support for test sharding enables distributing tests across parallel runners.
-
-### Hooks and Extensions
-
-- Users can extend test suite behavior with `SetUpTestSuite()` and `TearDownTestSuite()` for expensive setup and teardown shared by all tests.
-- Global environments (`testing::Environment`) provide setup/teardown at the test program level.
-- Event listener API enables custom output, logging, or integration with external systems.
-
----
-
-## 6. Visualizing the Relationships
+## Diagram: xUnit Model Flow in GoogleTest
 
 ```mermaid
-graph TD
-  subgraph TestRunner
-    RunAllTests -->|Iterates| TestSuiteList[TestSuites]
-    TestSuiteList --> TestSuite1[TestSuite: FixtureClass]
-    TestSuiteList --> TestSuite2[TestSuite: FixtureClass]
-  end
-
-  subgraph TestSuite1
-    TestSuite1 --> Test1[TestInfo: Test1]
-    TestSuite1 --> Test2[TestInfo: Test2]
-  end
-
-  subgraph TestSuite2
-    TestSuite2 --> Test3[TestInfo: Test3]
-    TestSuite2 --> Test4[TestInfo: Test4]
-  end
-
-  subgraph TestExecution
-    Test1 --> Fixture1[TestFixture Instance]
-    Fixture1 --> RunSetUp
-    Fixture1 --> RunTestBody
-    Fixture1 --> RunTearDown
-
-    Test2 --> Fixture2[TestFixture Instance]
-
-    Test3 --> Fixture3[TestFixture Instance]
-    Test4 --> Fixture4[TestFixture Instance]
-  end
-
-  TestSuite1 -->|SetUpTestSuite / TearDownTestSuite| SuiteSetup[TestSuite Setup]
-  TestSuite2 --> SuiteSetup
-
-  subgraph ParameterizedTests
-    INSTANTIATE_TEST_SUITE_P --> ParamGenerator[Generator]
-    ParamGenerator --> MultipleTestInstances[TestInstances]
-  end
-
-  MultipleTestInstances -- Instantiates --> Test1
-  MultipleTestInstances -- Instantiates --> Test2
-
-  %% Style
-  classDef suite fill:#eef,stroke:#77f,stroke-width:1px;
-  class TestSuite1,TestSuite2 suite;
+flowchart TD
+  A[Start Test Execution] --> B[Construct Test Fixture]
+  B --> C[Call SetUp()]
+  C --> D[Run Test Method]
+  D --> E[Call TearDown()]
+  E --> F[Destroy Test Fixture]
+  F --> G[Record Test Outcome]
+  G --> H{More Tests?}
+  H -- Yes --> B
+  H -- No --> I[Report Results & End]
 ```
 
 ---
 
-## 7. Practical Tips for Users
+## Summary
 
-- **Always name your test suites and test names without underscores (`_`)** to avoid name collisions and registration conflicts.
-- **Use parameterized tests to avoid repetitious code** and increase test coverage efficiently.
-- **Define `SetUpTestSuite()` and `TearDownTestSuite()` for expensive shared resource management** instead of duplicating this in every test.
-- **Be mindful that tests are independent**: each test gets a fresh fixture instance; avoid dependencies between tests.
-- **Use the `INSTANTIATE_TEST_SUITE_P` only once per parameterized test suite** to avoid confusing multiple expansions.
-- **Provide custom parameter name generators when using complex parameter types** to make test output and filtering easier.
+The xUnit architecture drives GoogleTest's testing workflow by standardizing test structure through fixtures, test cases, and runners. This ensures that every test is isolated, repeatable, and maintainable, fostering robust testing practices and reliable results.
+
+By embracing this model, users build a solid foundation for writing clear, structured, and high-quality tests that scale with their projects.
 
 ---
 
-## 8. Troubleshooting Common Issues
+## Relevant Links and References
 
-- **Tests not running?** Ensure parameterized tests (`TEST_P`) are properly instantiated with `INSTANTIATE_TEST_SUITE_P`.
-- **Fixture conflicts?** All tests in a test suite must share the same fixture class; mixing `TEST` and `TEST_F` in the same suite leads to runtime errors.
-- **Skipped tests?** Check if filtering or sharding configuration accidentally excludes tests.
-- **Test name conflicts?** Avoid underscores in test suite and test names.
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- [Mocking Principles and Techniques](https://google.github.io/googletest/concepts/testing-architecture/mocking-principles)
+- [Parameterized & Typed Tests](https://google.github.io/googletest/guides/parameterized_tests.html)
+- [Writing Your First Test](https://google.github.io/googletest/guides/getting-started/writing-your-first-test)
 
-For more details, see [Test Discovery and Execution Guide](../guides/core_testing_workflows/test_discovery_execution.md).
-
----
-
-## 9. Summary
-
-GoogleTest’s implementation of the xUnit architecture streamlines the process of defining, discovering, and running tests. Through fixtures, parameterized tests, and automatic registration, users can manage complex test suites with ease, leveraging built-in generators and extensibility points to tailor testing workflows for real-world scenarios. This model guarantees independent and reproducible tests, supports scalable test generation, and provides detailed reporting. Understanding this architecture is fundamental for harnessing GoogleTest’s full potential.
-
----
-
-## See Also
-
-- [GoogleTest Primer](../primer.md) for beginner-friendly test writing
-- [Advanced Testing Patterns: Parameterized Tests](../advanced.md#value-parameterized-tests)
-- [Testing Reference: Core Macros](../api-reference/core-testing-api/test-case-definition.md)
-- [Test Discovery and Execution Guide](../guides/core_testing_workflows/test_discovery_execution.md)
-- [GoogleTest Architecture Overview](../overview/architecture-integration-usecases/architecture-overview.md)
-
----
-
+Explore these to enhance your testing capabilities and best practices.
