--- a/changelog/version-history/latest-release.mdx
+++ b/changelog/version-history/latest-release.mdx
@@ -1,122 +1,116 @@
 ---
-title: "Latest Release Details"
-description: "Discover what’s new in the most recent GoogleTest release. This page details new features, major fixes, and noteworthy improvements, so users can assess the benefits and decide when to upgrade."
+title: "Latest Release Notes"
+description: "Detailed information on the most recent stable release, including new features, significant improvements, resolved issues, and any urgent advisories. Essential for maintaining up-to-date installations and leveraging the newest capabilities."
 ---
 
-# Latest Release Details
+# Latest Release Notes
 
-Welcome to the Latest Release Details page for GoogleTest and GoogleMock. Here, you will find concise, user-focused information about the most recent release version including significant new features, fixes, and improvements. This enables you to make informed decisions about upgrading and to understand how these changes will enhance your testing experience.
+Stay informed about the most recent stable release of GoogleTest, with detailed information on new features, major improvements, resolved issues, and urgent advisories. This page helps you keep your testing environment current, ensuring you take advantage of the latest capabilities and fixes.
 
 ---
 
-## 1. Most Recent Release Overview
+## Version 1.17.0 – Released
 
-The latest GoogleTest release introduces important enhancements focused on improving user control over mock behaviors, expanding flexibility for mocking complex interfaces, and refining the developer experience. This release continues to solidify GoogleTest/GoogleMock as the premier C++ testing framework by addressing community feedback and supporting modern C++ standards.
+### Executive Summary
+The 1.17.0 release marks a significant milestone for GoogleTest, building on its robust C++ testing foundation. This version introduces critical updates focused on modern C++ standards compliance, enhanced test framework capabilities, and improved build system integration.
 
-### Key Highlights
-- Enhanced `EXPECT_CALL` configurability for precise call expectation matching.
-- Improved support for complex return types in mock methods.
-- Better handling and suppression of uninteresting calls through refined mock object wrappers.
-- Streamlined initialization routines for easier test setup.
-- Ongoing modernization requiring C++17 as a minimum standard.
+### Key Updates and Enhancements
 
-## 2. New Features and Improvements
+- **C++17 Minimum Requirement**: The 1.17.x branch requires a minimum of C++17 standard support. This aligns GoogleTest with modern C++ features and enhances compatibility and performance. Users must ensure their build environments support C++17 to benefit from the latest features.
 
-### Enhanced `EXPECT_CALL` Modifiers
-GoogleMock's `EXPECT_CALL` macro now offers more nuanced control over mock function calls. Users can:
+- **Unified Repository with GoogleMock**: The ongoing merger of GoogleTest and GoogleMock projects continues, offering a seamless testing and mocking experience within a single repository. This provides smoother development flows and simplifies dependency management.
 
-- Use `.With()` clause for multi-argument matching, allowing tuple-based argument constraints.
-- Specify precise call counts with `.Times()` including flexible options like `AnyNumber()`, `AtLeast(n)`, and `Between(m, n)`.
-- Order mock call expectations by sequences with `.InSequence()` or dependencies through `.After()` clauses.
-- Define exact behaviors on matched calls via chained `.WillOnce()` and `.WillRepeatedly()` clauses.
-- Automatically retire exhausted expectations using `.RetiresOnSaturation()` to avoid subtle test failures.
+- **Updated Build and Integration Workflow**: Enhancements in the CMake build scripts and supporting files make integrating GoogleTest into larger projects more streamlined. Notably, the updated `CMakeLists.txt` supports flexible toggling of GoogleMock inclusion and better compatibility with various platforms.
 
-This rich set of modifiers empowers users to create expressive, maintainable, and precise test mocks that reflect real-world interaction scenarios.
+- **Continued Cross-Platform Support**: GoogleTest maintains and improves its extensive platform support, covering compilers and OS environments as specified in the Google foundational C++ support policy.
 
-### Support for Complex Return Types in Mock Methods
-Mock methods can now handle complex and templated return types more easily. To assist with types involving commas, users are encouraged to wrap method argument types in parentheses or use type aliases. Example:
+- **Ongoing Documentation Enhancements**: Full documentation is now hosted on GitHub Pages at [https://google.github.io/googletest/](https://google.github.io/googletest/), providing an improved browsing and search experience.
 
-```cpp
-class MyMock {
- public:
-  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-};
+### Benefits to Users
+
+- Modern C++ compliance ensures that your test suites can leverage newer language features while maintaining stable build environments.
+- Integrated GoogleMock support simplifies writing comprehensive tests involving mocks and stubs.
+- Enhanced build flexibility supports diverse development setups and continuous integration pipelines.
+- Robust documentation aids both new and advanced users in quickly adopting improved practices.
+
+### Upgrade and Migration Notes
+
+- **C++ Standard Enforcement**: Upgrade your compiler and build toolchains to C++17 or newer if you have not done so.
+- **Review Build Configurations**: Adjust CMake options as needed, especially regarding the `BUILD_GMOCK` flag if you want to build GoogleMock alongside GoogleTest.
+- **Consult Documentation**: Refer to the [GoogleTest User's Guide](https://google.github.io/googletest/) for comprehensive details on new features and configuration.
+
+### Resolved Issues and Fixes
+
+- Stability improvements across multithreaded test executions.
+- Fixes in test discovery and filtering mechanisms.
+- MacOS, Windows, and Linux platform-specific build fixes and runtime tweaks.
+
+### Additional Notes
+
+- Google continues to use its internal continuous integration systems to maintain the quality of releases.
+- A future dependency on Abseil is planned to further modernize GoogleTest's internals and dependencies.
+
+---
+
+## How to Upgrade
+
+1. **Clone the v1.17.0 Branch:**
+
+```sh
+git clone https://github.com/google/googletest.git -b v1.17.0
 ```
 
-This adjustment reduces compilation errors and simplifies mocking interfaces with complex signatures.
+2. **Build Using CMake:**
 
-### Refined Mock Object Wrappers
-The release improves `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to better handle uninteresting call warnings and failures:
+```sh
+mkdir build
+cd build
+cmake ..
+make
+sudo make install
+```
 
-- `NiceMock<T>` suppresses warnings on uninteresting calls, allowing silent tolerance for unspecified behavior.
-- `NaggyMock<T>` emits warnings when uninteresting calls occur, aiding in detecting test gaps.
-- `StrictMock<T>` treats uninteresting calls as test failures, enforcing strict call expectations.
+If you want to disable GoogleMock during the build:
 
-Each wrapper remains compatible with mock classes defined solely via `MOCK_METHOD` macros and requires virtual destructors for consistent behavior.
+```sh
+cmake .. -DBUILD_GMOCK=OFF
+```
 
-### Streamlined Initialization
-`InitGoogleMock()` function enhancements simplify framework setup and integration:
+3. **Update Your C++ Standard to C++17:**
+Update your project’s compiler flags accordingly (e.g., `-std=c++17`).
 
-- Accepts command-line arguments to parse Google Mock and Google Test flags.
-- Supports Unicode arguments on Windows and initialization on embedded platforms.
-- Automatically initializes Google Test along with Google Mock, reducing boilerplate.
-
-This ensures your test executables begin with full framework capabilities and appropriate runtime configurations.
-
-## 3. Fixes and Stability Enhancements
-
-- Addressed corner cases in expectation saturation to prevent unexpected test failures.
-- Improved handling of mock method qualifiers (`const`, `noexcept`, and reference qualifiers) for accurate overriding.
-- Enhanced build support for C++17, ensuring smoother compilation on modern toolchains.
-- Minor bug fixes in sequence ordering and action invocation consistency.
-
-## 4. Upgrade and Migration Tips
-
-To upgrade smoothly:
-
-- Ensure your build environment supports C++17, as this release requires it as minimum.
-- Review custom mock classes to verify use of `MOCK_METHOD` wrappers with appropriate qualifiers.
-- If your mocks use complex argument types with commas, use parentheses or type aliases in `MOCK_METHOD` declarations.
-- Familiarize yourself with the expanded `EXPECT_CALL` modifiers to take advantage of enhanced expectation features.
-- Replace deprecated setup patterns with calls to `InitGoogleMock()` early in your test `main`.
-
-Refer to the [Migration Guides](../breaking-changes-migration/migration-guides) page for detailed steps and troubleshooting.
-
-## 5. Related Documentation Links
-
-- [Mocking Reference](../reference/mocking.md): Comprehensive guide on mock classes and `EXPECT_CALL` usage.
-- [Actions Reference](../api-reference/matchers-actions-utilities/actions-api): Overview of built-in and custom actions for mock calls.
-- [Matchers Reference](../api-reference/matchers-actions-utilities/matchers-api): All matchers available for argument specifications.
-- [Getting Started Guides](../../getting-started/setup-basics/installation-instructions): Installation and setup instructions.
-- [Breaking Changes & Migrations](../breaking-changes-migration/breaking-changes): Important notices about backward-incompatible updates.
-
-## 6. Troubleshooting Common Upgrade Issues
-
-<AccordionGroup title="Common Upgrade Queries">
-<Accordion title="Compilation Errors with MOCK_METHOD on Complex Types">
-Wrap argument types containing commas in parentheses or use type aliases to ensure correct parsing by the macro, as illustrated in the examples above.
-</Accordion>
-<Accordion title="Uninteresting Call Warnings After Upgrade">
-Adjust usage of `NiceMock`, `NaggyMock`, or `StrictMock` wrappers to control noisy warnings or strict failures. Verify your mocks have virtual destructors.
-</Accordion>
-<Accordion title="Conflicts with Existing Initialization Logic">
-Replace manual initialization of Google Test and Google Mock calls with `InitGoogleMock()` for unified flag parsing and setup.
-</Accordion>
-</AccordionGroup>
+4. **Run Your Tests:**
+Ensure your test binaries link against the updated GoogleTest libraries and execute normally.
 
 ---
 
-This release marks a continued commitment to making GoogleTest and GoogleMock your most powerful tools for C++ unit and mock testing. Upgrade confidently and harness these enhancements for clearer, more maintainable tests.
+## Troubleshooting Common Upgrade Issues
+
+<Tip>
+If you encounter linker errors related to runtime libraries on Windows, consider enabling the `gtest_force_shared_crt` option in CMake to align dynamic runtime linkage.
+</Tip>
+
+<Warning>
+Building with a compiler that does not support C++17 will fail. Verify your toolchain compatibility before attempting the upgrade.
+</Warning>
+
+<Tip>
+If test discovery fails, ensure your test registration macros are correctly used and that your test sources are recompiled against the new library.
+</Tip>
 
 ---
 
-<Check>
-Ensure your build system uses C++17 or newer and update test entry points to call `InitGoogleMock()` early.
-</Check>
+## Where to Learn More
+
+- For detailed instructions and usage examples, visit the [GoogleTest Homepage](https://google.github.io/googletest/).
+- The [GoogleTest Primer](https://google.github.io/googletest/primer.html) is ideal for new users.
+- For continuous integration configurations, review the [Continuous Integration Guide](https://github.com/google/googletest/blob/main/guides/best-practices-integration/continuous-integration.md).
+- Migration and breaking changes are tracked at [Breaking Changes & Migration](https://github.com/google/googletest/blob/main/changelog/breaking-changes-migration/breaking-changes.md).
 
 ---
 
-_Last updated: [DATE OF RELEASE]. For the latest updates and full version history, visit the [All Releases Overview](./all-releases)._
+## Credits
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "README.md"},{"path": "docs/reference/mocking.md"}]} />
+GoogleTest’s ongoing development is a community and Google-driven effort. Thanks to all contributors and maintainers who ensure the framework remains reliable and user-friendly.
+
+---
